Bug 370188 - Ctrl+drag in the Timeline to copy multiple frames not working
Summary: Ctrl+drag in the Timeline to copy multiple frames not working
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: 3.0.2 Alpha
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
: 377211 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-10-06 09:11 UTC by schwarzeralptraum
Modified: 2018-10-11 09:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description schwarzeralptraum 2016-10-06 09:11:44 UTC
Ctrl does not appear to be properly mapped to command (since ctrl + click is a special behavior on Macs). As a result, attempts to copy multiple frames by ctrl+dragging them only moves the frames to the new location without copying them.

Reproducible: Always

Steps to Reproduce:
1. Open/create a multiple frame animation .kra file.
2. Select multiple frames.
3. Attempt to copy them by ctrl + dragging them to somewhere else on the timeline.

Actual Results:  
The selected frames are moved to their new location.

Expected Results:  
The selected frames are copied to their new location.
Comment 1 wolthera 2016-10-06 11:16:17 UTC
And cmd+drag doesn't do anything?
Comment 2 schwarzeralptraum 2016-10-06 11:21:00 UTC
No, cmd+drag doesn't do anything either. Sorry I forgot to mention that. I tried other meta keys too. No dice.
Comment 3 schwarzeralptraum 2016-10-06 11:37:54 UTC
Okay it works now, but only if you press the meta key during the drag rather than at the start or before the drag, and only with the alt key. As for the actual alt key function, I have no idea about it. Should we fix it so that it should use cmd instead of alt and try and figure out why the actual alt function doesn't work on OSX?
Comment 4 joupent 2017-11-25 14:20:01 UTC
*** Bug 377211 has been marked as a duplicate of this bug. ***
Comment 5 vanyossi 2018-10-11 09:46:59 UTC
Git commit a8794861b7bb8c3d719291197680d11977b2dbe3 by Ivan Yossi.
Committed on 11/10/2018 at 09:42.
Pushed by ivany into branch 'master'.

Summary: Ctrl+drag in the Timeline to copy multiple frames not working OSX

Reviewers: #krita

Tags: #krita

Differential Revision: https://phabricator.kde.org/D16107

M  +3    -0    plugins/dockers/animation/timeline_frames_view.cpp

https://commits.kde.org/krita/a8794861b7bb8c3d719291197680d11977b2dbe3