BUG: 370188

Summary: Ctrl+drag in the Timeline to copy multiple frames not working OSX

Reviewers: #krita

Tags: #krita

Differential Revision: https://phabricator.kde.org/D16107